gitops/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: osspa
  namespace: osspa
spec:
  host: dev.osspa.org
  port:
    targetPort: 8443-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: pawebsite
    weight: 100
  wildcardPolicy: None
